--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Arcana
-description: Arcana template for Jekyll
+name: GIT Courier Services
+description: Best In Class International Courier Service
 paginate: 10
 baseurl: ''
